- added some information to tutorial 0 - Introduction

--- a/ipython-notebooks/tutorials/0 - Introduction.ipynb
+++ b/ipython-notebooks/tutorials/0 - Introduction.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "# Before we initialise APERCAL we need to import the lib module to eanble the logger.\n",
     "import lib\n",
-    "# The log file should point to the directory you are reducing the data in\n",
+    "# The log file should point to the directory you are reducing the data in. So change this path to your apercal distribution.\n",
     "lib.setup_logger('info', logfile='/home/adebahr/apercal/ipython-notebooks/tutorials/logs/0.log')\n",
     "\n",
     "# Now we start APERCAL. If you start the notebook a popup window will come up where you can define the IP-adress the server runs on.\n",
@@ -131,6 +131,26 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/tutorials/cfg/0.cfg successfully read! ###\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Each step corresponds to a python module in the APERCAL directory (mostly with the same name), which has all the neccessary functions to execute a step.\n",
+    "# You might have noticed that there is no initial.py in the directory. This is because this is setting the environment and the location of the data for the reduction. The parameters in this step are therefore universal for the whole reduction.\n",
+    "# To run the tutorial on your data you need to modify the config textfile's initial parameters to work in your directory. Do that now! Then reload the config file from your directory by changing the following line.\n",
+    "preflag = apercal.preflag('/home/adebahr/apercal/ipython-notebooks/tutorials/cfg/0.cfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -324,8 +344,6 @@
     }
    ],
    "source": [
-    "# Each step corresponds to a python module in the APERCAL directory (mostly with the same name), which has all the neccessary functions to execute a step.\n",
-    "# You might have noticed that there is no initial.py in the directory. This is because this is setting the environment and the location of the data for the reduction. The parameters in this step are therefore universal for the whole reduction.\n",
     "# For uncalibrated data this has to be located in the raw subdirectory given in the initial step. The reduction then starts with the pre-flagging.\n",
     "# To execute a single step you can just give it a go.\n",
     "preflag.go()"
@@ -333,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,13 +363,13 @@
     }
    ],
    "source": [
-    "# Now lets load the convert module and see what it can do\n",
+    "# Now lets load the convert module and see what it can do. Again exchange the loacation of the config file with your modified one.\n",
     "convert = apercal.convert('/home/adebahr/apercal/ipython-notebooks/tutorials/cfg/0.cfg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -730,13 +748,13 @@
     }
    ],
    "source": [
-    "# An easy tool to manage config files is the config module\n",
+    "# An easy tool to manage config files is the config module. Change the location of the default.cfg to the one in your apercal distribution.\n",
     "config = apercal.config('/home/adebahr/apercal/default.cfg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
