- tutorial 0 and 1 finished - updated configuration file parameters

--- a/ipython-notebooks/tutorials/0 - Introduction.ipynb
+++ b/ipython-notebooks/tutorials/0 - Introduction.ipynb
@@ -803,7 +803,7 @@
    ],
    "source": [
     "config.add_step('PREFALG')\n",
-    "# You can also load and save configuration files easily."
+    "# You can also load and save configuration files easily using the load and save functions."
    ]
   },
   {
@@ -812,7 +812,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "# You can execute single MIRIAD tasks within the notebook. First you have to initialise the task using the lib module:\n",
+    "# Let's convert the NGC4062 data from UVFITS to MIRIAD 'by hand'. You need to change the directory paths to your directories.\n",
+    "fits = lib.miriad('fits')\n",
+    "fits.in_ = '/data/adebahr/apertif/tutorial/0/crosscal/NGC4062.UVFITS'\n",
+    "# The MIRIAD in keyword needs an additional underscore at the end since python has a predefined global function in.\n",
+    "fits.op = 'uvin'\n",
+    "fits.out = '/data/adebahr/apertif/tutorial/0/crosscal/NGC4062.mir'\n",
+    "fits.go()"
    ]
   }
  ],
