- started Lockman Hole notebook - fixed some issues in scal.py

--- a/ipython-notebooks/tutorials/0 - Introduction.ipynb
+++ b/ipython-notebooks/tutorials/0 - Introduction.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
@@ -363,7 +381,7 @@
     }
    ],
    "source": [
-    "# Now lets load the convert module and see what it can do. Again exchange the loacation of the config file with your modified one.\n",
+    "# Now lets load the convert module and see what it can do. Again exchange the location of the config file with your modified one.\n",
     "convert = apercal.convert('/home/adebahr/apercal/ipython-notebooks/tutorials/cfg/0.cfg')"
    ]
   },
@@ -531,7 +549,7 @@
    "source": [
     "# Now lets execute the individual substeps of this function individually. First reset the pipeline to the state before the conversion by using the reset method:\n",
     "convert.reset()\n",
-    "# This deletes the complete directory with all converted files. Be careful with this command. You might need to execute previous steps of the pipeline again before you can redo things."
+    "# This deletes all converted files in the crosscal directory. Be careful with this command. You might need to execute previous steps of the pipeline again before you can redo things."
    ]
   },
   {
