--- a/ipython-notebooks/tutorials/1 - Self-calibration.ipynb
+++ b/ipython-notebooks/tutorials/1 - Self-calibration.ipynb
@@ -100,13 +100,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/1/selfcal #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "SELFCAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/1/selfcal #\n"
      ]
     },
@@ -177,13 +170,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/1/selfcal/00 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "SELFCAL - INFO : # Splitting of data chunk 0 for subband 0 done #\n"
      ]
     },
@@ -227,13 +213,6 @@
      "output_type": "stream",
      "text": [
       "SELFCAL - INFO : # New frequency bin is 0.00124999997206 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/1/selfcal/01 #\n"
      ]
     },
     {
@@ -289,13 +268,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SELFCAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/1/selfcal/02 #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "SELFCAL - INFO : # Splitting of data chunk 0 for subband 2 done #\n"
      ]
     },
@@ -339,13 +311,6 @@
      "output_type": "stream",
      "text": [
       "SELFCAL - INFO : # New frequency bin is 0.00124999997206 GHz #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/1/selfcal/03 #\n"
      ]
     },
     {
@@ -4359,7 +4324,7 @@
     "# We can compare the mfclean image with one where we deeply cleaned the individual freqeuncy chunks and stacked the resultant images in the end.\n",
     "final.final_continuum_mode = 'stack'\n",
     "final.go()\n",
-    "# We do not need to remove any files here because the two imaging modes are using seperate directories"
+    "# We do not need to remove any files here because the two imaging modes are using seperate directories."
    ]
   },
   {
