- fixed standard calibration mode - fixed final imaging minor cycles - fixed final imaging in case you have an emtpy image for stacking - Added log output for standard self-calibration and final imaging for image rms and peak

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
-- implement minor cycle in adaptive selfcal
+- add minor cycles to adaptive
 - implement transfer adaptive to manual, and standard to manual parameters function
 - implement amp calibration
 - write flag module to flag during cross-calibration
 - create cube function for line and polarisation
 - implement rm-synthesis and rm-clean
-- add option to use different parameters for frequnecy chunks in manual mode
+- add option to use different parameters for frequency chunks in manual mode
 - check if flagline counts nan as low/high noise
