- updated bandpass_stability notebook - added the options for reading gain and delay tables

--- a/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.ipynb
+++ b/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.ipynb
@@ -321,7 +321,7 @@
    "outputs": [],
    "source": [
     "import sub_readmirlog\n",
-    "values, freqs = sub_readmirlog.get_bp(ccal.fluxcal)"
+    "values, freqs = sub_readmirlog.get_bp(ccal.crosscaldir + '/' + ccal.fluxcal)"
    ]
   },
   {
@@ -356,7 +356,7 @@
     }
    ],
    "source": [
-    "# In addition it gives the a 1D-array of the frequency axis\n",
+    "# In addition it gives the 1D-array of the frequency axis. The unit is GHz.\n",
     "print(freqs)"
    ]
   },
@@ -378,10 +378,10 @@
     {
      "data": {
       "text/html": [
-       "<div id='e4bd384b-8c9e-45c7-8874-d563a040e4b4'></div>"
+       "<div id='f5104c6d-5104-4653-989e-db406d4edfe9'></div>"
       ],
       "text/plain": [
-       "<div id='e4bd384b-8c9e-45c7-8874-d563a040e4b4'></div>"
+       "<div id='f5104c6d-5104-4653-989e-db406d4edfe9'></div>"
       ]
      },
      "execution_count": 0,
@@ -416,10 +416,10 @@
     {
      "data": {
       "text/html": [
-       "<div id='cd7b8d18-d703-4c9f-8371-fb247c2ff98d'></div>"
+       "<div id='6de307d8-3add-4243-8a5b-91d4c230fa2c'></div>"
       ],
       "text/plain": [
-       "<div id='cd7b8d18-d703-4c9f-8371-fb247c2ff98d'></div>"
+       "<div id='6de307d8-3add-4243-8a5b-91d4c230fa2c'></div>"
       ]
      },
      "execution_count": 0,
@@ -433,6 +433,90 @@
     "plt.figure()\n",
     "plt.plot(values[0,:,0])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[  0.213 -30.56 ]\n  [  0.213 -48.234]\n  [  0.214 -51.18 ]\n  [  0.213 -47.111]\n  [  0.214 -44.463]\n  [  0.214 -44.828]\n  [  0.213 -44.484]\n  [  0.212 -51.969]\n  [  0.21  -48.739]\n  [  0.21  -48.049]\n  [  0.208 -52.47 ]]\n\n [[  0.245 -74.758]\n  [  0.245 -83.218]\n  [  0.249 -82.015]\n  [  0.248 -78.328]\n  [  0.248 -78.075]\n  [  0.248 -79.468]\n  [  0.248 -76.598]\n  [  0.247 -84.73 ]\n  [  0.246 -81.489]\n  [  0.246 -80.411]\n  [  0.245 -83.989]]\n\n [[  0.218   0.   ]\n  [  0.217   0.   ]\n  [  0.218   0.   ]\n  [  0.216  -0.   ]\n  [  0.217   0.   ]\n  [  0.219   0.   ]\n  [  0.22    0.   ]\n  [  0.218   0.   ]\n  [  0.217   0.   ]\n  [  0.217   0.   ]\n  [  0.217   0.   ]]\n\n [[  0.      0.   ]\n  [  0.22  -92.877]\n  [  0.221 -95.775]\n  [  0.223 -94.754]\n  [  0.222 -92.516]\n  [  0.223 -94.435]\n  [  0.222 -91.336]\n  [  0.22  -96.813]\n  [  0.219 -90.286]\n  [  0.219 -86.096]\n  [  0.219 -86.965]]\n\n [[  0.227  16.429]\n  [  0.226  35.963]\n  [  0.227  13.509]\n  [  0.226   9.819]\n  [  0.225   6.117]\n  [  0.227  17.115]\n  [  0.226  41.076]\n  [  0.226  32.337]\n  [  0.225  28.589]\n  [  0.      0.   ]\n  [  0.      0.   ]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# You can also convert the gains(amplitude, phase) and the delays to a numpy array\n",
+    "# Amplitude, phase:\n",
+    "gains, times = sub_readmirlog.get_gains(ccal.crosscaldir + '/' + ccal.fluxcal)\n",
+    "# The values are ordered in (antenna, solution interval, amplitude[0] or phase[1]) order\n",
+    "print(gains)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "execution_count": 0,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id='c4a35c99-f4fb-4d72-ae51-2fa45baa88d0'></div>"
+      ],
+      "text/plain": [
+       "<div id='c4a35c99-f4fb-4d72-ae51-2fa45baa88d0'></div>"
+      ]
+     },
+     "execution_count": 0,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# times is a datetime instance with the actual timestamps of the solution interval\n",
+    "# matplotlib can use them\n",
+    "# Let's plot the phase gains of the first antenna\n",
+    "from matplotlib import pyplot as plt\n",
+    "plt.figure()\n",
+    "plt.plot(gains[0,:,1])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-4adc422dc4ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# If you solved for delays above you can also load them as a numpy array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdelays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msub_readmirlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_delays\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mccal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrosscaldir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mccal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfluxcal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# The values are ordered in (antenna, solution interval) order. The unit is nanoseceonds.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/adebahr/apercal/sub_readmirlog.pyc\u001b[0m in \u001b[0;36mget_delays\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0mobsdate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcmd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[0mstarttime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'20'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mobsdate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobsdate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%b'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtm_mon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobsdate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m     \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtempdir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mgains_string\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ascii'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m     \u001b[0mdays\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'col1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[0mtimes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'col2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ],
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "# If you solved for delays above you can also load them as a numpy array\n",
+    "delays, times = sub_readmirlog.get_delays(ccal.crosscaldir + '/' + ccal.fluxcal)\n",
+    "# The values are ordered in (antenna, solution interval) order. The unit is nanoseceonds."
    ]
   },
   {
