- fixed bug in gains for sub_readmirlog - created subroutine for managing temporary directories (sub_managetmp.py) - overhauled Bandpass_stability.cfg parameters

--- a/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.ipynb
+++ b/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.ipynb
@@ -77,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "PREFLAG - INFO : # Moved to directory /data/adebahr/apertif/090808_3C286/raw #\n"
+      "PREFLAG - INFO : # Moved to directory /data/adebahr/apertif/100608_3C48/raw #\n"
      ]
     },
     {
@@ -106,20 +106,6 @@
      "output_type": "stream",
      "text": [
       "PREFLAG - INFO : # Flagging of shadowed antennas for flux calibrator data done #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "PREFLAG - INFO : # Flagging timerange 19:45:0~21:00:0 for flux calibrator data #\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "PREFLAG - INFO : # Flagging of timerange 19:45:0~21:00:0 for flux calibrator data done #\n"
      ]
     },
     {
@@ -192,14 +178,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CONVERT - INFO : # Creating directory /data/adebahr/apertif/090808_3C286/crosscal #\n"
+      "CONVERT - INFO : # Creating directory /data/adebahr/apertif/100608_3C48/crosscal #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CONVERT - INFO : # Moved to directory /data/adebahr/apertif/090808_3C286/crosscal #\n"
+      "CONVERT - INFO : # Moved to directory /data/adebahr/apertif/100608_3C48/crosscal #\n"
      ]
     },
     {
@@ -213,7 +199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CONVERT - INFO : ### Converted MS file 3C286.MS to UVFITS using CASA toolkit! ###\n"
+      "CONVERT - INFO : ### Converted MS file 3C48.MS to UVFITS using CASA toolkit! ###\n"
      ]
     },
     {
@@ -241,7 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CONVERT - INFO : ### Converted UVFITS file 3C286.MS to MIRIAD format using MIRIAD task fits! ###\n"
+      "CONVERT - INFO : ### Converted UVFITS file 3C48.MS to MIRIAD format using MIRIAD task fits! ###\n"
      ]
     },
     {
@@ -265,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -284,31 +270,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['MfCal: $Revision: 1.20 $, $Date: 2017/05/08 02:31:10 $',\n 'Reading the data ...',\n 'Number correlations accepted: 11433931',\n 'Number of frequency bands/settings: 1',\n 'Number of polarisations selected: 1',\n 'Number of solution intervals: 11',\n 'Number of passband solution intervals: 11',\n 'Initialising ...',\n 'Using known frequency variation of 3c286',\n 'Generating initial solution estimate ...',\n 'Doing solution refinement ...',\n 'Iter= 1, Solution Error:  1.314',\n 'Iter= 2, Solution Error:  0.004',\n 'Iter= 3, Solution Error:  0.003',\n 'Iter= 4, Solution Error:  0.002',\n 'Iter= 5, Solution Error:  0.001',\n 'Iter= 6, Solution Error:  0.001',\n 'Saving solution ...']"
+       "['MfCal: $Revision: 1.20 $, $Date: 2017/05/08 02:31:10 $']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Set the parameters for the bandpass calibration\n",
-    "gainint = '60'\n",
-    "gapint = '60'\n",
-    "bpint = '60'\n",
+    "gainint = '60' # Solution interval for calibrator gains\n",
+    "gapint = '60' # Maximum time gap in data until a new solution interval starts\n",
+    "bpint = '60' # Solution interval for the bandpass\n",
     "\n",
     "# Execute the bandpass calibration\n",
     "mfcal = lib.miriad('mfcal')\n",
     "mfcal.vis = ccal.fluxcal\n",
-    "# Uncomment the next line if you additionally want to solve for delays\n",
-    "# mfcal.options = 'delay'\n",
+    "# Comment the next line out if you don't want to solve for delays\n",
+    "mfcal.options = 'delay'\n",
     "mfcal.stokes = 'XX'\n",
     "mfcal.interval = gainint + ',' + gapint + ',' + bpint\n",
     "mfcal.go()"
@@ -316,9 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### Cleaning temporary directory! ###\n"
+     ]
+    }
+   ],
    "source": [
     "import sub_readmirlog\n",
     "values, freqs = sub_readmirlog.get_bp(ccal.crosscaldir + '/' + ccal.fluxcal)"
@@ -326,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 0.61656  0.62122  0.61325 ...,  0.61607  0.6226   0.62194]\n  [ 0.6349   0.63871  0.63726 ...,  0.63262  0.63669  0.64024]\n  [ 0.70044  0.70101  0.68672 ...,  0.68706  0.7016   0.68585]\n  ..., \n  [ 1.19099  1.18999  1.19587 ...,  1.18902  1.1781   1.17507]\n  [ 1.08435  1.08751  1.08263 ...,  1.07953  1.08486  1.07575]\n  [ 0.98957  0.98351  0.99244 ...,  0.9833   0.98545  0.99069]]\n\n [[ 0.6409   0.6394   0.64033 ...,  0.63669  0.64161  0.64021]\n  [ 0.68173  0.68058  0.684   ...,  0.68665  0.6773   0.68561]\n  [ 0.72599  0.72731  0.7384  ...,  0.73847  0.72294  0.74117]\n  ..., \n  [ 1.10697  1.11135  1.11267 ...,  1.10588  1.10984  1.1073 ]\n  [ 1.00618  1.02285  1.00765 ...,  1.00554  1.01064  1.01144]\n  [ 0.93458  0.93082  0.92706 ...,  0.92222  0.92947  0.9275 ]]\n\n [[ 0.68074  0.66295  0.66088 ...,  0.63941  0.65699  0.67018]\n  [ 0.68722  0.67871  0.66358 ...,  0.64268  0.66168  0.68146]\n  [ 0.74471  0.73106  0.73689 ...,  0.70295  0.72822  0.74681]\n  ..., \n  [ 1.12101  1.13198  1.12013 ...,  1.14432  1.14865  1.1437 ]\n  [ 1.02047  1.01938  1.0202  ...,  1.06257  1.04249  1.0415 ]\n  [ 0.92395  0.93411  0.93761 ...,  0.96109  0.95687  0.94591]]\n\n [[ 0.       0.64977  0.65564 ...,  0.6568   0.64295  0.65142]\n  [ 0.       0.6606   0.65203 ...,  0.65274  0.65921  0.65358]\n  [ 0.       0.72772  0.7227  ...,  0.72677  0.71343  0.72837]\n  ..., \n  [ 0.       1.15388  1.14547 ...,  1.14185  1.14889  1.13761]\n  [ 0.       1.04385  1.03873 ...,  1.04345  1.04971  1.04183]\n  [ 0.       0.96195  0.96169 ...,  0.95849  0.95371  0.95349]]\n\n [[ 0.55776  0.57289  0.56874 ...,  0.64017  0.       0.     ]\n  [ 0.64116  0.64655  0.63382 ...,  0.66094  0.       0.     ]\n  [ 0.69368  0.69677  0.69074 ...,  0.70162  0.       0.     ]\n  ..., \n  [ 1.15858  1.14395  1.14357 ...,  1.14766  0.       0.     ]\n  [ 1.05154  1.03926  1.045   ...,  1.02602  0.       0.     ]\n  [ 0.974    0.9568   0.96013 ...,  1.00517  0.       0.     ]]]\n"
+      "[[[ 0.64928  0.65051  0.64772  0.64697]\n  [ 0.66708  0.66579  0.66592  0.67001]\n  [ 0.72471  0.72529  0.73084  0.72099]\n  ..., \n  [ 1.13299  1.12879  1.12593  1.12938]\n  [ 1.03272  1.02164  1.02981  1.0309 ]\n  [ 0.94377  0.94623  0.94056  0.94029]]\n\n [[ 0.62129  0.62196  0.6233   0.62231]\n  [ 0.63477  0.63682  0.63808  0.63951]\n  [ 0.69376  0.69308  0.69016  0.68572]\n  ..., \n  [ 1.18436  1.19134  1.18702  1.19413]\n  [ 1.0835   1.08269  1.08303  1.07907]\n  [ 0.99131  0.99141  0.98972  0.99139]]\n\n [[ 0.59213  0.59156  0.58927  0.59291]\n  [ 0.63948  0.6415   0.64477  0.63875]\n  [ 0.7066   0.70255  0.70325  0.70965]\n  ..., \n  [ 1.14649  1.14722  1.14954  1.14787]\n  [ 1.04827  1.04332  1.04802  1.04118]\n  [ 0.95244  0.95371  0.95898  0.95526]]\n\n ..., \n [[ 0.64707  0.64488  0.64533  0.64753]\n  [ 0.66737  0.66121  0.66411  0.66286]\n  [ 0.72086  0.72417  0.72091  0.72486]\n  ..., \n  [ 1.14155  1.13868  1.14469  1.14545]\n  [ 1.04429  1.04461  1.04328  1.04418]\n  [ 0.95676  0.95479  0.9563   0.95447]]\n\n [[ 0.40183  0.39658  0.       0.     ]\n  [ 0.48085  0.4913   0.       0.     ]\n  [ 0.59686  0.59924  0.       0.     ]\n  ..., \n  [ 1.17323  1.16815  0.       0.     ]\n  [ 1.01914  1.02606  0.       0.     ]\n  [ 0.87344  0.87842  0.       0.     ]]\n\n [[ 0.62245  0.62364  0.61912  0.62229]\n  [ 0.63729  0.63857  0.63803  0.64038]\n  [ 0.70124  0.70307  0.70096  0.70068]\n  ..., \n  [ 1.10309  1.09991  1.09906  1.09837]\n  [ 0.99647  0.99854  0.99987  0.99958]\n  [ 0.90766  0.90806  0.91171  0.91068]]]\n"
      ]
     }
    ],
@@ -344,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -378,10 +372,10 @@
     {
      "data": {
       "text/html": [
-       "<div id='f5104c6d-5104-4653-989e-db406d4edfe9'></div>"
+       "<div id='a5daa2cc-bd0b-4ecb-9845-4fb44d05dab9'></div>"
       ],
       "text/plain": [
-       "<div id='f5104c6d-5104-4653-989e-db406d4edfe9'></div>"
+       "<div id='a5daa2cc-bd0b-4ecb-9845-4fb44d05dab9'></div>"
       ]
      },
      "execution_count": 0,
@@ -400,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -416,10 +410,10 @@
     {
      "data": {
       "text/html": [
-       "<div id='6de307d8-3add-4243-8a5b-91d4c230fa2c'></div>"
+       "<div id='997e9b02-5bc5-4cce-9c8e-57ddaf02e5ac'></div>"
       ],
       "text/plain": [
-       "<div id='6de307d8-3add-4243-8a5b-91d4c230fa2c'></div>"
+       "<div id='997e9b02-5bc5-4cce-9c8e-57ddaf02e5ac'></div>"
       ]
      },
      "execution_count": 0,
@@ -437,14 +431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[  0.213 -30.56 ]\n  [  0.213 -48.234]\n  [  0.214 -51.18 ]\n  [  0.213 -47.111]\n  [  0.214 -44.463]\n  [  0.214 -44.828]\n  [  0.213 -44.484]\n  [  0.212 -51.969]\n  [  0.21  -48.739]\n  [  0.21  -48.049]\n  [  0.208 -52.47 ]]\n\n [[  0.245 -74.758]\n  [  0.245 -83.218]\n  [  0.249 -82.015]\n  [  0.248 -78.328]\n  [  0.248 -78.075]\n  [  0.248 -79.468]\n  [  0.248 -76.598]\n  [  0.247 -84.73 ]\n  [  0.246 -81.489]\n  [  0.246 -80.411]\n  [  0.245 -83.989]]\n\n [[  0.218   0.   ]\n  [  0.217   0.   ]\n  [  0.218   0.   ]\n  [  0.216  -0.   ]\n  [  0.217   0.   ]\n  [  0.219   0.   ]\n  [  0.22    0.   ]\n  [  0.218   0.   ]\n  [  0.217   0.   ]\n  [  0.217   0.   ]\n  [  0.217   0.   ]]\n\n [[  0.      0.   ]\n  [  0.22  -92.877]\n  [  0.221 -95.775]\n  [  0.223 -94.754]\n  [  0.222 -92.516]\n  [  0.223 -94.435]\n  [  0.222 -91.336]\n  [  0.22  -96.813]\n  [  0.219 -90.286]\n  [  0.219 -86.096]\n  [  0.219 -86.965]]\n\n [[  0.227  16.429]\n  [  0.226  35.963]\n  [  0.227  13.509]\n  [  0.226   9.819]\n  [  0.225   6.117]\n  [  0.227  17.115]\n  [  0.226  41.076]\n  [  0.226  32.337]\n  [  0.225  28.589]\n  [  0.      0.   ]\n  [  0.      0.   ]]]\n"
+      "[[[   0.189   92.268]\n  [   0.189   89.42 ]\n  [   0.189   86.608]\n  [   0.19    82.02 ]]\n\n [[   0.195 -112.632]\n  [   0.195 -114.651]\n  [   0.195 -115.651]\n  [   0.195 -118.458]]\n\n [[   0.208    0.   ]\n  [   0.208   -0.   ]\n  [   0.208   -0.   ]\n  [   0.208    0.   ]]\n\n [[   0.226  142.283]\n  [   0.226  142.85 ]\n  [   0.226  143.228]\n  [   0.226  142.5  ]]\n\n [[   0.222  -62.295]\n  [   0.222  -61.648]\n  [   0.223  -61.797]\n  [   0.223  -62.04 ]]\n\n [[   0.206 -158.081]\n  [   0.206 -156.421]\n  [   0.206 -154.005]\n  [   0.206 -150.745]]\n\n [[   0.505   -0.198]\n  [   0.505    1.413]\n  [   0.       0.   ]\n  [   0.       0.   ]]\n\n [[   0.221 -111.067]\n  [   0.222 -106.703]\n  [   0.222 -104.205]\n  [   0.223  -96.641]]]\n"
      ]
     }
    ],
@@ -458,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -474,10 +468,10 @@
     {
      "data": {
       "text/html": [
-       "<div id='c4a35c99-f4fb-4d72-ae51-2fa45baa88d0'></div>"
+       "<div id='828a6b46-dc65-48cd-8ca7-0c44a7fac21d'></div>"
       ],
       "text/plain": [
-       "<div id='c4a35c99-f4fb-4d72-ae51-2fa45baa88d0'></div>"
+       "<div id='828a6b46-dc65-48cd-8ca7-0c44a7fac21d'></div>"
       ]
      },
      "execution_count": 0,
@@ -497,22 +491,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-4adc422dc4ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# If you solved for delays above you can also load them as a numpy array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdelays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msub_readmirlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_delays\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mccal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrosscaldir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mccal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfluxcal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# The values are ordered in (antenna, solution interval) order. The unit is nanoseceonds.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/adebahr/apercal/sub_readmirlog.pyc\u001b[0m in \u001b[0;36mget_delays\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0mobsdate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcmd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[0mstarttime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'20'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mobsdate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobsdate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%b'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtm_mon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobsdate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m     \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtempdir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mgains_string\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ascii'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m     \u001b[0mdays\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'col1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[0mtimes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'col2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ],
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If you solved for delays above you can also load them as a numpy array\n",
     "delays, times = sub_readmirlog.get_delays(ccal.crosscaldir + '/' + ccal.fluxcal)\n",
